# typedprotocol

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_typedprotocol.py
typedprotocol/: __init__.py  method_checker.py  protocol.py  substitution.py  type_checker.py
